Fixed post link wrap

--- a/reddit-clone/styles/Submissions.module.css
+++ b/reddit-clone/styles/Submissions.module.css
@@ -46,3 +46,7 @@
   height: 32px;
   width: 32px;
 }
+
+.postUrl {
+  word-break: break-all;
+}
